# supmeal

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  tmp_e2e_supmeal.ps1
.codex/environments/: environment.toml
.github/workflows/: ci.yml  codeql.yml
backend/: Dockerfile  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_api.py  test_suggest.py
docs/design/: CHARTE_GRAPHIQUE.md  MAQUETTES.md
docs/screenshots/: README.md
frontend/: Dockerfile  eslint.config.js  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
patch-suggestions/: APPLY.ps1  README.md  _manifest.json  apply.sh
server/: Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py
server/app/: __init__.py  main.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: admin.py  auth.py  cookbooks.py  import_export.py  meal_plans.py  oauth.py  recipes.py  shopping.py  users.py
server/app/core/: config.py  csrf.py  deps.py  pwned.py  ratelimit.py
server/app/db/: base.py  session.py
server/app/models/: cookbook.py  recipe.py  shopping.py  user.py
server/app/schemas/: cookbook.py  recipe.py
server/app/services/: connection_manager.py  import_export.py
server/tests/: conftest.py  test_api.py
web/: package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+103 files in other folders)
